--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/crypto-js": "^4.2.2",
 		"crypto-js": "^4.2.0",
 		"i": "^0.3.7",
+		"ibridge": "^0.0.5",
 		"npm": "^10.5.2",
 		"qrcode": "^1.5.3"
 	}
