--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 	],
 	"main": "./dist/baray.umd.cjs",
 	"module": "./dist/baray.js",
-	"types": "./index.d.ts",
+	"types": "./dist/index.d.ts",
 	"exports": {
-		"types": "./index.d.ts",
+		"types": "./dist/index.d.ts",
 		"import": "./dist/baray.js",
 		"require": "./dist/baray.umd.cjs"
 	},
@@ -22,7 +22,8 @@
 	"devDependencies": {
 		"@types/node": "^20.12.7",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10"
+		"vite": "^5.0.10",
+		"vite-plugin-dts": "^3.9.1"
 	},
 	"dependencies": {
 		"@tma.js/sdk": "^1.5.3",
