--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "baray-js",
 	"private": true,
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"type": "module",
 	"files": [
 		"dist"
@@ -21,11 +21,10 @@
 	"devDependencies": {
 		"@types/node": "^20.12.7",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10",
+		"vite": ">=5.1.7",
 		"vite-plugin-dts": "^3.9.1"
 	},
 	"dependencies": {
-		"@tma.js/sdk": "^1.5.3",
 		"@types/crypto-js": "^4.2.2",
 		"crypto-js": "^4.2.0",
 		"i": "^0.3.7",
